--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,10 @@
     <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
 
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <div class="btn">
+        <a class="btn-link" href="./1-gallery.html">Gallery</a>
+        <a class="btn-link" href="./2-form.html">Form</a>
+      </div>
     </main>
 
     <load src="./partials/footer.html" />
